[tool.poetry]
name = "reddit-twitter-bot"
version = "0.1.0"
description = "Twitter bot for r/dota2"
authors = ["Shuxin Zhan <shuxinzhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "*"
imgurpython = "*"
cachetools = "*"
black = "^22.12.0"
tweepy = "^4.14.0"
pillow = "^10.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
